<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="com.roodie.materialmovies.licenses"
        android:summary="@string/show_licenses"
        android:title="@string/show_licenses_summary" />

    <Preference
        android:key="com.roodie.materialmovies.build_version"
        android:summary=""
        android:title="@string/build_version" />

    <Preference
        android:key="creator"
        android:summary="@string/creator_context"
        android:title="@string/creator" >
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://github.com/AlexParfenjuk" />
        </Preference>

    <Preference
        android:key="poweredTmdb"
        android:summary="@string/powered_tmdb_content"
        android:title="@string/powered_tmdb" />

</PreferenceScreen>