<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_media_download">
    <CheckBoxPreference
        android:defaultValue="False"
        android:key="com.roodie.materialmovies.autoupdatewlanonly"
        android:title="@string/pref_updatewifionly"
        android:summary="@string/pref_updatewifionlysummary" />

    <CheckBoxPreference
        android:defaultValue="True"
        android:key="com.roodie.materialmovies.animations"
        android:title="@string/pref_animations"
        android:summary="@string/pref_animations_summary" />
        />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_appearance">
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/themeSelection"
            android:entryValues="@array/themeSelectionData"
            android:key="com.roodie.materialmovies.theme"
            android:title="@string/pref_theme" />

    </PreferenceCategory>

</PreferenceScreen>