<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/search_view"
    android:layout_width="fill_parent"
    android:layout_height="?actionBarSize"
    android:background="@color/mm_green"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <ImageButton
        android:id="@+id/up_button"
        android:layout_width="56.0dip"
        android:layout_height="56.0dip"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/label_back"
        android:tint="@color/mm_white_1" />

    <EditText
        android:id="@+id/search_edt"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_major"
        android:layout_weight="1.0"
        android:background="@null"
        android:hint="@string/search_hint"
        android:lines="1"
        android:maxLength="14"
        android:textColor="@color/mm_white_1"
        android:editable="true"
        android:enabled="true"
        android:imeOptions="actionSearch"
        android:inputType="textNoSuggestions|text" />

    <ImageButton
        android:id="@+id/cancel_btn"
        android:layout_width="56.0dip"
        android:layout_height="56.0dip"
        android:layout_marginLeft="@dimen/spacing_major"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/label_cancel"
        android:src="@drawable/ic_action_close" />
</LinearLayout>